Fix work layout on mobile

--- a/src/sass/routes/work.scss
+++ b/src/sass/routes/work.scss
@@ -5,7 +5,7 @@
 .portfolio {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(4, 0.5fr);
+	grid-template-rows: repeat(6, 0.5fr);
 	grid-column-gap: 1.6rem;
 	grid-row-gap: 1.6rem;
 	padding: 20px;
@@ -99,9 +99,18 @@
 	}
 }
 
+.feature1 {
+	grid-row: 1/3;
+}
+
 .feature1,
 .feature4 {
 	grid-column: 1/3;
+}
+
+.feature5,
+.feature6 {
+	grid-row: 5/7;
 }
 
 .porfolio__image--desktop {
